--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :subhead %>
-    <%= form.text_field :subhead, id: :note_subhead %>
+    <%= form.text_field :subtitle, id: :note_subtitle %>
   </div>
 
   <div class="field">
