--- a/app/views/talks/_form.html.erb
+++ b/app/views/talks/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_for [@note, @note.talks.build] do |form| %>
 <div class="field">
   <%= form.label :Nombre %>
-  <%= form.text_field :nombre %>
+  <%= form.text_field :author %>
 </div>
 
 <div class="field">
   <%= form.label :Contenido %>
-  <%= form.text_field :body %>
+  <%= form.text_field :comment %>
 </div>
 
   <div class="actions">
